Core: Fix topic/popup specific styling I: Change core popup padding...
Move padding to the elements inside of the wkp-feature-information-body.
This allows to set topic/popup specific scrollbar without padding space next to it.

--- a/src/components/FeatureInformation/FeatureInformation.scss
+++ b/src/components/FeatureInformation/FeatureInformation.scss
@@ -25,7 +25,17 @@
   }
 
   .wkp-feature-information-body {
-    padding: 10px;
+    & > * {
+      padding: 10px;
+    }
+
+    & > *:first-child {
+      padding-bottom: 0;
+    }
+
+    & > *:last-child {
+      padding-bottom: 10px;
+    }
 
     .wkp-pagination-wrapper {
       display: flex;
